<resources>
    <string name="app_name">Musick</string>
    <string name="buzzer">BUZZER</string>
    <string name="next">Next</string>
    <string name="start_game">Start Game</string>
    <string name="enter_spotify_playlist_link">Enter Spotify Playlist Link</string>
    <string name="app_logo">App Logo</string>
    <string name="app_description">Test your music knowledge with friends using your favorite Spotify playlists!</string>
    <string name="login_required_message">To start playing, please log in with your Spotify account.</string>
    <string name="login_with_spotify">Login with Spotify</string>
    <string name="settings">Settings</string>
    <string name="start_songs_at_random_positions_instead_of_the_beginning">Start songs at random positions instead of the beginning</string>
    <string name="random_song_start">Random Song Start</string>
    <string name="info">ℹ️ Info</string>
    <string name="info_text">When Random Song Start is enabled, songs will begin playing at a random position within the first third of the track. This makes the game more challenging by avoiding predictable intros.</string>
</resources>